--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,38 @@
 
     <title>Equilibrium • Equalizer calibration tool</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.css"
+      integrity="sha512-KRrxEp/6rgIme11XXeYvYRYY/x6XPGwk0RsIC6PyMRc072vj2tcjBzFmn939xzjeDhj0aDO7TDMd7Rbz3OEuBQ=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.js"
+      integrity="sha512-EnXkkBUGl2gBm/EIZEgwWpQNavsnBbeMtjklwAa7jLj60mJk932aqzXFmdPKCG6ge/i8iOCK0Uwl1Qp+S0zowg=="
+      crossorigin="anonymous"
+    ></script>
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section id="sliders">
+      <div class="band" data-freq="35 Hz"></div>
+      <div class="band" data-freq="70 Hz"></div>
+      <div class="band" data-freq="160 Hz"></div>
+      <div class="band" data-freq="320 Hz"></div>
+      <div class="band" data-freq="600 Hz"></div>
+      <div class="band" data-freq="1 kHz"></div>
+      <div class="band" data-freq="1.8 kHz"></div>
+      <div class="band" data-freq="3.5 kHz"></div>
+      <div class="band" data-freq="4.7 kHz"></div>
+      <div class="band" data-freq="5.6 kHz"></div>
+      <div class="band" data-freq="7.5 kHz"></div>
+      <div class="band" data-freq="9.5 kHz"></div>
+      <div class="band" data-freq="12 kHz"></div>
+      <div class="band" data-freq="16 kHz"></div>
+      <div class="band" data-freq="20 kHz"></div>
+    </section>
+  </body>
 </html>
