--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="Signal generator for equalizer caibration"
+      content="Signal generator for equalizer calibration"
     />
 
     <title>Equilibrium • Equalizer calibration tool</title>
@@ -30,21 +30,21 @@
   </head>
   <body>
     <section id="sliders">
-      <div class="band" data-freq="35 Hz"></div>
-      <div class="band" data-freq="70 Hz"></div>
-      <div class="band" data-freq="160 Hz"></div>
-      <div class="band" data-freq="320 Hz"></div>
-      <div class="band" data-freq="600 Hz"></div>
-      <div class="band" data-freq="1 kHz"></div>
-      <div class="band" data-freq="1.8 kHz"></div>
-      <div class="band" data-freq="3.5 kHz"></div>
-      <div class="band" data-freq="4.7 kHz"></div>
-      <div class="band" data-freq="5.6 kHz"></div>
-      <div class="band" data-freq="7.5 kHz"></div>
-      <div class="band" data-freq="9.5 kHz"></div>
-      <div class="band" data-freq="12 kHz"></div>
-      <div class="band" data-freq="16 kHz"></div>
-      <div class="band" data-freq="20 kHz"></div>
+      <div class="band" data-freqstr="35 Hz" data-freqnum="35"></div>
+      <div class="band" data-freqstr="70 Hz" data-freqnum="70"></div>
+      <div class="band" data-freqstr="160 Hz" data-freqnum="160"></div>
+      <div class="band" data-freqstr="320 Hz" data-freqnum="320"></div>
+      <div class="band" data-freqstr="600 Hz" data-freqnum="600"></div>
+      <div class="band" data-freqstr="1 kHz" data-freqnum="1000"></div>
+      <div class="band" data-freqstr="1.8 kHz" data-freqnum="1800"></div>
+      <div class="band" data-freqstr="3.5 kHz" data-freqnum="3500"></div>
+      <div class="band" data-freqstr="4.7 kHz" data-freqnum="4700"></div>
+      <div class="band" data-freqstr="5.6 kHz" data-freqnum="5600"></div>
+      <div class="band" data-freqstr="7.5 kHz" data-freqnum="7500"></div>
+      <div class="band" data-freqstr="9.5 kHz" data-freqnum="9500"></div>
+      <div class="band" data-freqstr="12 kHz" data-freqnum="12000"></div>
+      <div class="band" data-freqstr="16 kHz" data-freqnum="16000"></div>
+      <div class="band" data-freqstr="20 kHz" data-freqnum="20000"></div>
     </section>
   </body>
 </html>
