--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
       content="Signal generator for equalizer calibration"
     />
 
-    <title>Equilibrium • Equalizer calibration tool</title>
+    <title>EQuilibrium • Equalizer calibration tool</title>
+
+    <link rel="icon" type="image/png" href="logo.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <link
       rel="stylesheet"
