--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <a id="configure" class="action">configure</a>
+    <a id="reset" class="action">reset</a>
     <section id="sliders">
       <div class="band" data-freqstr="35 Hz" data-freqnum="35"></div>
       <div class="band" data-freqstr="70 Hz" data-freqnum="70"></div>
