--- a/src/index.html
+++ b/src/index.html
@@ -32,24 +32,21 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <dialog>
+      <button type="reset">⤫</button>
+      <p>Specify space-separated band frequencies</p>
+      <input autofocus />
+      <button type="submit">Confirm</button>
+      <p class="suggestions">
+        <a>60 230 910 3000 14000</a>
+        <a>63 125 250 500 1000 2000 4000 8000 16000</a>
+        <a>32 64 125 250 500 1000 2000 4000 8000 16000</a>
+        <a>50 100 160 250 400 630 1к 1.6к 2.5к 4к 6.3к 10к 16к 19к</a>
+        <a>35 70 160 320 600 1k 1.8k 3.5k 4.7k 5.6k 7.5k 9.5k 12k 16k 20k</a>
+      </p>
+    </dialog>
     <a id="configure" class="action">configure</a>
     <a id="reset" class="action">reset</a>
-    <section id="sliders">
-      <div class="band" data-freqstr="35 Hz" data-freqnum="35"></div>
-      <div class="band" data-freqstr="70 Hz" data-freqnum="70"></div>
-      <div class="band" data-freqstr="160 Hz" data-freqnum="160"></div>
-      <div class="band" data-freqstr="320 Hz" data-freqnum="320"></div>
-      <div class="band" data-freqstr="600 Hz" data-freqnum="600"></div>
-      <div class="band" data-freqstr="1 kHz" data-freqnum="1000"></div>
-      <div class="band" data-freqstr="1.8 kHz" data-freqnum="1800"></div>
-      <div class="band" data-freqstr="3.5 kHz" data-freqnum="3500"></div>
-      <div class="band" data-freqstr="4.7 kHz" data-freqnum="4700"></div>
-      <div class="band" data-freqstr="5.6 kHz" data-freqnum="5600"></div>
-      <div class="band" data-freqstr="7.5 kHz" data-freqnum="7500"></div>
-      <div class="band" data-freqstr="9.5 kHz" data-freqnum="9500"></div>
-      <div class="band" data-freqstr="12 kHz" data-freqnum="12000"></div>
-      <div class="band" data-freqstr="16 kHz" data-freqnum="16000"></div>
-      <div class="band" data-freqstr="20 kHz" data-freqnum="20000"></div>
-    </section>
+    <section id="sliders"></section>
   </body>
 </html>
